More space between social buttons New box around Adherer button Small fixes to match Blackwood designs

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,7 +43,9 @@ input {
   border: 0;
   background: #ea5b0c;
 }
-
+#header {
+  margin:20px;
+}
 #tete {
   color: #fff;
   overflow: hidden;
@@ -64,13 +66,19 @@ input {
 #brand {
   text-align: left;
 }
+#brand-footer {
+  text-align: center;
+}
 #social {
   text-align: right;
 }
-#tete .content {
-  max-width: 500px;
+#social .logo {
+  padding:10px;
+  float: right;
 }
-
+#tete .content {
+  max-width: 700px;
+}
 #tete .content.home {
   color: black;
 }
@@ -87,6 +95,8 @@ input {
 }
 #tete .content a.btn {
   font-weight: bold;
+  max-width: 500px;
+  font-size: 18px;
 }
 #tete .content .btn {
   border: 2px solid #fff;
@@ -95,24 +105,24 @@ input {
 }
 
 #stats {
-  padding: 90px 0;
+  padding: 60px 10px;
   background: #ea5b0c;
 }
 #stats .stats-box {
-  width: 33%;
   margin-left: 15px;
   margin-bottom: 30px;
 }
 #stats .stats-box span.number {
   color: #000;
   float: left;
-  font-size: 100px;
+  font-size: 64px;
   line-height: 100px;
+  margin: 20px;
 }
 #stats .stats-box span._label {
   color: #fff;
-  font-size: 40px;
-  line-height: 50px;
+  font-size: 32px;
+  line-height: 1;
 }
 
 #notre-vision {
@@ -179,8 +189,10 @@ input {
 }
 
 #adherer {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px;
+  padding: 60px;
+  border-style: solid;
+  border-color: #eb6014;
 }
 #adherer a.bandeau {
   display: block;
